ops/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: prometheus.shixh.com
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 9090
            path: /
  tls:
    - hosts:
        - prometheus.shixh.com
    - secretName: ssl-sxh
